--- a/homescreen.html
+++ b/homescreen.html
@@ -33,4 +33,8 @@
 			<img class="appIconImg" id="appIconImg" src="./icons/files.png">
 		</button>
 	</div>
+	<div class="window" id="win1">
+		<iframe class="appScreen" id="app1" src="https://www.google.com">
+		</iframe>
+	</div>
 </html>
