--- a/homescreen.html
+++ b/homescreen.html
@@ -15,7 +15,7 @@
 	</div>
 	<div class="dockPanel" id="dockPanel">
 		<button class="appIcons" id="appIcon">
-			<img class="appIconImg" id="appIconImg" src="./icons/files.png">
+			<img class="appIconImg" id="appIconImg" src="./icons/allApps.svg">
 		</button>
 		<button class="appIcons" id="appIcon">
 			<img class="appIconImg" id="appIconImg" src="./icons/files.png">
@@ -36,5 +36,11 @@
 	<div class="window" id="win1">
 		<iframe class="appScreen" id="app1" src="https://www.google.com">
 		</iframe>
+		<button class="windowMenuButton" id="windowMenuButton1">
+			···
+		</button>
 	</div>
+	<p class="datetime" id="datetime">
+		7월 21일 일요일 12:06
+	</p>
 </html>
