--- a/homescreen.html
+++ b/homescreen.html
@@ -34,7 +34,7 @@
 		</button>
 	</div>
 	<div class="window" id="win1">
-		<iframe class="appScreen" id="app1" src="https://www.google.com">
+		<iframe class="appScreen" id="app1" src="https://www.w3schools.com">
 		</iframe>
 		<button class="windowMenuButton" id="windowMenuButton1">
 			···
