--- a/homescreen.html
+++ b/homescreen.html
@@ -43,4 +43,19 @@
 	<p class="datetime" id="datetime">
 		7월 21일 일요일 12:06
 	</p>
+	
+	<div class="windowMenu" id="wMenu1">
+		<button class="winMenuB" id="backB1">
+			<img class="winMenuB" src="./icons/arrow-back.svg">
+		</button>
+		<button class="winMenuB" id="closeB1">
+			<img class="winMenuB" src="./icons/arrow-back.svg">
+		</button>
+		<button class="winMenuB" id="maxB1">
+			<img class="winMenuB" src="./icons/arrow-back.svg">
+		</button>
+		<button class="winMenuB" id="minB1">
+			<img class="winMenuB" src="./icons/arrow-back.svg">
+		</button>
+	</div>
 </html>
