--- a/homescreen.html
+++ b/homescreen.html
@@ -58,4 +58,21 @@
 			<img class="winMenuB" src="./icons/arrow-back.svg">
 		</button>
 	</div>
+	<div class="controlCenter" id="controlCenter">
+		<div class="wifiBox" id="wifiBox">
+			<button class="wifiToggle" id="wifiToggle">
+				wifi icon
+			</button>
+			<p class="wifiLabel">Wi-Fi</p>
+			<p class="wifiLabelSub" id="wifiLabelSub">사용 안 함</p>
+		</div>
+		<div class="btBox" id="btBox">
+			<button class="btToggle" id="btToggle">
+				wifi icon
+			</button>
+			<p class="btLabel">Wi-Fi</p>
+			<p class="btLabelSub" id="btLabelSub">사용 안 함</p>
+		</div>
+	</div>
+	</div>
 </html>
