--- a/homescreen.html
+++ b/homescreen.html
@@ -70,7 +70,7 @@
 			<button class="btToggle" id="btToggle">
 				wifi icon
 			</button>
-			<p class="btLabel">Wi-Fi</p>
+			<p class="btLabel">Bluetooth</p>
 			<p class="btLabelSub" id="btLabelSub">사용 안 함</p>
 		</div>
 	</div>
