--- a/homescreen.html
+++ b/homescreen.html
@@ -68,7 +68,7 @@
 		</div>
 		<div class="btBox" id="btBox">
 			<button class="btToggle" id="btToggle">
-				wifi icon
+				bt icon
 			</button>
 			<p class="btLabel">Bluetooth</p>
 			<p class="btLabelSub" id="btLabelSub">사용 안 함</p>
