--- a/homescreen.html
+++ b/homescreen.html
@@ -40,10 +40,11 @@
 			···
 		</button>
 	</div>
-	<p class="datetime" id="datetime">
-		7월 21일 일요일 12:06
-	</p>
-	
+	<div class="statusbar" id="statusbar">
+		<p class="datetime" id="datetime">
+			7월 21일 일요일 12:06
+		</p>
+	</div>
 	<div class="windowMenu" id="wMenu1">
 		<button class="winMenuB" id="backB1">
 			<img class="winMenuB" src="./icons/arrow-back.svg">
