--- a/homescreen.html
+++ b/homescreen.html
@@ -40,11 +40,6 @@
 			···
 		</button>
 	</div>
-	<div class="statusbar" id="statusbar">
-		<p class="datetime" id="datetime">
-			7월 21일 일요일 12:06
-		</p>
-	</div>
 	<div class="windowMenu" id="wMenu1">
 		<button class="winMenuB" id="backB1">
 			<img class="winMenuB" src="./icons/arrow-back.svg">
@@ -75,5 +70,10 @@
 			<p class="btLabelSub" id="btLabelSub">사용 안 함</p>
 		</div>
 	</div>
+	</div>
+	<div class="statusbar" id="statusbar">
+		<button class="datetime" id="datetime" onclick="ctrlPan();">
+			7월 21일 일요일 12:06
+		</button>
 	</div>
 </html>
