--- a/homescreen.html
+++ b/homescreen.html
@@ -4,6 +4,7 @@
 		<title>PorongOS</title>
 		<link rel="stylesheet" href="./css/home.css">
 		<link rel="stylesheet" href="./css/systemUI.css">
+		<link rel="stylesheet" href="./css/controlCenter.css">
 		<script src="./js/home.js"></script>
 	</body>
 	<div class="mainPanel" id="mainPanel">
