--- a/homescreen.html
+++ b/homescreen.html
@@ -40,9 +40,11 @@
 	<div class="window" id="win1">
 		<iframe class="appScreen" id="app1" src="./apps/files.html">
 		</iframe>
-		<button class="closeW" id="closeW">
-			<img class="winCtrlImg" src="./icons/close.svg">
-		</button>
+		<div class="windowControlBox">
+			<button class="windowMax">
+				
+			</button>
+		</div>
 	</div>
 
 	<div class="controlCenter" id="controlCenter">
