--- a/homescreen.html
+++ b/homescreen.html
@@ -42,7 +42,20 @@
 		</iframe>
 		<div class="windowControlBox">
 			<button class="windowMax">
-				
+				<p class="windowCtrlText">전체화면</p>
+				<img class="windowCtrlImg" src="./icons/fullscreen.svg">
+			</button>
+			<button class="windowAdd">
+				<p class="windowCtrlText">새 창 열기</p>
+				<img class="windowCtrlImg" src="./icons/newWindow.svg">
+			</button>
+			<button class="windowMin">
+				<p class="windowCtrlText">최소화</p>
+				<img class="windowCtrlImg" src="./icons/minimize.svg">
+			</button>
+			<button class="windowClose">
+				<p class="windowCloseText">닫기</p>
+				<img class="windowCtrlImg" src="./icons/close.svg">
 			</button>
 		</div>
 	</div>
