--- a/screen.html
+++ b/screen.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<body id="wallpaper">
+	<body id="wallpaper" >
 		<title>PorongOS</title>
 		<script src="./homeScreen.js"></script>
 	</body>
+	<div id="empty">
+	</div>
 </html>
